# ldc24-gcs

./: .gitmodules  README.md
config/: hmi.rviz  zenoh_gcs_config.json5  zenoh_lore_config.json5  zenoh_rob_config.json5  zenoh_tenny_config.json5
docker/container-x86-cudev-ai/: Dockerfile
docker/container-x86-cudev-ai/.devcontainer/: devcontainer.json  docker-compose.yaml
docker/container-x86-dev/: aliases.sh  commands.sh
docker/container-x86-dev/.devcontainer/: devcontainer.json  docker-compose.yaml
src/PTZ/axis_camera/: .gitignore  package.xml
src/PTZ/axis_camera/axis_camera/: axis_camera_node.py
src/PTZ/axis_camera/config/: axis_camera_lab.yaml
src/PTZ/axis_camera/launch/: axis_camera_turin.launch.py
src/PTZ/axis_camera_interfaces/: package.xml
src/PTZ/axis_camera_interfaces/msg/: ImagePTZF.msg  PTZF.msg
src/PTZ/axis_camera_interfaces/srv/: Selfie.srv
src/PTZ/axis_camera_tracker/: package.xml  setup.cfg  setup.py
src/PTZ/axis_camera_tracker/config/: calibration_9999.yaml
src/PTZ/axis_camera_tracker/launch/: axis_camera_tracker_lab.launch.py
src/axis_camera/: setup.py
src/axis_camera/axis_camera/: axis_camera_app.py  axis_camera_gazebo.py  axis_camera_node.py  saver.py  visualizer.py
src/axis_camera/config/: axis_camera_lab.yaml  axis_camera_turin.yaml
src/axis_camera/launch/: axis_camera_gazebo.launch.py  axis_camera_lab.launch.py  axis_camera_turin.launch.py
src/axis_camera/urdf/: axis_camera.xacro.urdf
src/axis_camera_interfaces/: CMakeLists.txt  package.xml
src/axis_camera_interfaces/msg/: ImageError.msg  ImagePT.msg  PTZF.msg
src/axis_camera_interfaces/srv/: Selfie.srv
src/axis_camera_tracker/: .gitignore
src/axis_camera_tracker/axis_camera_tracker/: axis_camera_tracker_app.py  axis_camera_tracker_node.py
src/axis_camera_tracker/config/: axis_camera_tracker_lab.yaml  axis_camera_tracker_turin.yaml
src/axis_camera_tracker/launch/: axis_camera_tracker_lab.launch.py  axis_camera_tracker_turin.launch.py
src/gcs_bringup/: CMakeLists.txt  package.xml
src/gcs_bringup/config/: gcs.yaml
src/gcs_bringup/dae/: backpack.dae  book.dae  fire_hydrant.dae  potted_plant.dae  stop_sign.dae  teddy_bear.dae  traffic_light.dae
src/gcs_bringup/launch/: gcs.launch.py  hmi.launch.py  hmi_sim.launch.py
src/gcs_bringup/rviz/: hmi.rviz  hmi_sim.rviz
src/gcs_fsm/: .gitignore  package.xml  setup.cfg  setup.py
src/gcs_fsm/config/: gcs_fsm.yaml  gcs_fsm_sim.yaml
src/gcs_fsm/gcs_fsm/: gcs_fsm_app.py  gcs_fsm_node.py  gcs_fsm_routines.py
src/gcs_fsm/launch/: gcs_fsm.launch.py  gcs_fsm_sim.launch.py
src/rviz_custom_plugins/: CMakeLists.txt  package.xml  rviz_custom_plugins.xml
src/rviz_custom_plugins/include/rviz_custom_plugins/: button_panel.hpp  interactive_marker.hpp  overlay_text_panel.hpp  visual_targets_display.hpp
src/rviz_custom_plugins/src/rviz_custom_plugins/: button_panel.cpp  interactive_marker.cpp  overlay_text_panel.cpp  visual_targets_display.cpp
