<?xml version="1.0"?>
<package format="3">
  <name>axis_camera</name>
  <version>0.1.0</version>
  <description>Axis PTZ camera driver module.</description>

  <maintainer email="isl.torvergata@gmail.com">Intelligent Systems Lab</maintainer>
  <license>GNU GPL v3.0</license>

  <depend>dua_qos_py</depend>
  <depend>ament_index_python</depend>
  <depend>axis_camera_interfaces</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros2_control</depend>
  <depend>hardware_interface</depend>
  <depend>joint_state_controller</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>rclpy</depend>
  <depend>robot_state_publisher</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>ros2launch</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>velocity_controllers</depend>
  <depend>xacro</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
